Feature/ovo data (#29)
* ovo data release

* api port changed to 7777

* mock endpoints changed. Auth added. Cache after S3 store operation
